Fix a vertical responsive layout bug of the copies' position.

--- a/less/main.less
+++ b/less/main.less
@@ -29,6 +29,7 @@
 		padding-right: 1.5em;	
 	}
 	@media (min-width: 380px) {
+		padding-top: 75vw;
 		padding-left: 2em;
 		padding-right: 2em;	
 	}
